--- a/input2_cw.html
+++ b/input2_cw.html
@@ -46,7 +46,7 @@
             <label for="birthday">Birthday: </label>
             <input type = "date" id="birthday" required >
         </fieldset>
-        <input type="checkbox" id="box">
+        <input type="checkbox" id="box" required>
         <label for="box">I agree to the terms and conditions</label>
     </form>
 
